# drawing

./: .gitignore  Cargo.toml
src/: base_shape.rs  main.rs  shader.wgsl  text.rs  texture.rs
src/base_shape/: base_shape.rs  mod.rs  zoom.rs
src/ui/: color.rs  dialog.rs  mod.rs  shader.wgsl  text.rs  transform.rs  ui.rs  utils.rs
src/uniform/: mod.rs
utils/: Cargo.toml
utils/src/: framework.rs
